--- a/src/angular/usermenu/usermenu.scss
+++ b/src/angular/usermenu/usermenu.scss
@@ -291,6 +291,12 @@
     }
   }
 
+  &.sbb-menu-panel-animations-disabled {
+    .sbb-menu-panel {
+      animation: none;
+    }
+  }
+
   .sbb-menu-item {
     min-width: calc(var(--sbb-usermenu-panel-width) - var(--sbb-border-width) * 2);
   }
