--- a/src/angular/styles/_typography.scss
+++ b/src/angular/styles/_typography.scss
@@ -1,4 +1,4 @@
-@use 'external/npm/node_modules/@angular/cdk' as cdk;
+@use '@angular/cdk' as cdk;
 @use 'sass:math';
 @use '@sbb-esta/angular' as sbb;
 
