--- a/docs/src/app/angular/icon-overview/cdn-icon-list/cdn-icon/cdn-icon.component.html
+++ b/docs/src/app/angular/icon-overview/cdn-icon-list/cdn-icon/cdn-icon.component.html
@@ -1,6 +1,6 @@
 <button
   class="sbb-svg-icon-wrapper sbb-button-reset-frameless"
-  [class.sbb-svg-icon-wrapper-dark]="cdnIcon?.tags.includes('dark')"
+  [class.sbb-svg-icon-wrapper-dark]="cdnIcon?.tags?.includes('dark')"
   (click)="openDialog()"
   aria-label="See icon details"
   type="button"
