--- a/docs/src/app/shared/component-viewer/component-viewer/component-viewer.component.html
+++ b/docs/src/app/shared/component-viewer/component-viewer/component-viewer.component.html
@@ -11,6 +11,8 @@
 </nav>
 
 <sbb-tab-nav-panel #tabPanel>
-  <sbb-variant-limitation [showcaseMetaEntry]="showcaseMetaEntry | async"></sbb-variant-limitation>
+  <sbb-variant-limitation
+    [showcaseMetaEntry]="(showcaseMetaEntry | async)!"
+  ></sbb-variant-limitation>
   <router-outlet></router-outlet>
 </sbb-tab-nav-panel>
