--- a/docs/src/app/shared/package-viewer/package-viewer.component.html
+++ b/docs/src/app/shared/package-viewer/package-viewer.component.html
@@ -1,6 +1,6 @@
 <sbb-sidebar-container>
   <sbb-sidebar role="navigation">
-    <sbb-expansion-panel expanded *ngFor="let section of (package | async).sections">
+    <sbb-expansion-panel expanded *ngFor="let section of (package | async)?.sections ?? []">
       <sbb-expansion-panel-header>{{ section.name }}</sbb-expansion-panel-header>
       <a
         sbbSidebarLink
