docs: migrate selectors to self-closing tags to align with Angular style

--- a/docs/src/app/angular/icon-overview/cdn-icon-list/cdn-icon-dialog/cdn-icon-dialog.component.html
+++ b/docs/src/app/angular/icon-overview/cdn-icon-list/cdn-icon-dialog/cdn-icon-dialog.component.html
@@ -3,12 +3,12 @@
   <div class="sbb-icon-code-wrapper">
     <div class="sbb-icon-original-size">
       <h4>Original size</h4>
-      <sbb-icon [svgIcon]="cdnIconPath"></sbb-icon>
+      <sbb-icon [svgIcon]="cdnIconPath" />
       <code>&lt;sbb-icon svgIcon="{{ cdnIconPath }}"&gt;&lt;/sbb-icon&gt;</code>
     </div>
     <div class="sbb-icon-resized-icon">
       <h4>Icon fits element size of parent</h4>
-      <sbb-icon [svgIcon]="cdnIconPath" class="sbb-icon-fit"></sbb-icon>
+      <sbb-icon [svgIcon]="cdnIconPath" class="sbb-icon-fit" />
       <code
         >&lt;sbb-icon svgIcon="{{ cdnIconPath }}" class="sbb-icon-fit"&gt;&lt;/sbb-icon&gt;</code
       >
