--- a/docs/src/app/angular/icon-overview/cdn-icon-list/cdn-icon/cdn-icon.component.html
+++ b/docs/src/app/angular/icon-overview/cdn-icon-list/cdn-icon/cdn-icon.component.html
@@ -5,6 +5,6 @@
   aria-label="See icon details"
   type="button"
 >
-  <sbb-icon [svgIcon]="cdnIconPath" aria-hidden="false" [attr.aria-label]="cdnIconPath"></sbb-icon>
+  <sbb-icon [svgIcon]="cdnIconPath" aria-hidden="false" [attr.aria-label]="cdnIconPath" />
 </button>
 <span class="sbb-svg-icon-path" [sbbTooltip]="cdnIconPath">{{ cdnIconPath }}</span>
