--- a/docs/src/app/angular/icon-overview/icon-overview.component.html
+++ b/docs/src/app/angular/icon-overview/icon-overview.component.html
@@ -1,7 +1,4 @@
-<sbb-cdn-icon-list
-  *ngIf="cdnIcons | async as _cdnIcons; else loading"
-  [cdnIcons]="_cdnIcons"
-></sbb-cdn-icon-list>
+<sbb-cdn-icon-list *ngIf="cdnIcons | async as _cdnIcons; else loading" [cdnIcons]="_cdnIcons" />
 <ng-template #loading>
-  <sbb-loading-indicator mode="medium" aria-label="Loading icons"></sbb-loading-indicator>
+  <sbb-loading-indicator mode="medium" aria-label="Loading icons" />
 </ng-template>
