--- a/docs/src/app/shared/component-viewer/example-viewer/example-viewer.component.html
+++ b/docs/src/app/shared/component-viewer/example-viewer/example-viewer.component.html
@@ -8,7 +8,7 @@
     aria-label="View code"
     sbbTooltip="View code"
   >
-    <sbb-icon svgIcon="showcase:code"></sbb-icon>
+    <sbb-icon svgIcon="showcase:code" />
   </button>
 
   <button
@@ -21,7 +21,7 @@
     aria-label="Edit example in StackBlitz"
     sbbTooltip="Edit example in StackBlitz"
   >
-    <sbb-icon svgIcon="link-external-small"></sbb-icon>
+    <sbb-icon svgIcon="link-external-small" />
   </button>
 </div>
 
@@ -31,4 +31,4 @@
   </sbb-tab>
 </sbb-tab-group>
 
-<sbb-example-outlet [exampleData]="exampleData"></sbb-example-outlet>
+<sbb-example-outlet [exampleData]="exampleData" />
