--- a/docs/src/app/shared/package-viewer/package-viewer.component.html
+++ b/docs/src/app/shared/package-viewer/package-viewer.component.html
@@ -12,6 +12,6 @@
     </sbb-expansion-panel>
   </sbb-sidebar>
   <sbb-sidebar-content role="main">
-    <router-outlet></router-outlet>
+    <router-outlet />
   </sbb-sidebar-content>
 </sbb-sidebar-container>
