build: rename showcase to docs

--- a/docs/src/app/app.component.html
+++ b/docs/src/app/app.component.html
@@ -1,6 +1,6 @@
 <sbb-header-lean
   label="SBB Angular"
-  [subtitle]="'Version ' + showcaseVersion"
+  [subtitle]="'Version ' + docsVersion"
   collapseBreakpoint="mobile"
 >
   <sbb-header-environment *ngIf="environmentBannerText">{{
