--- a/docs/src/app/shared/component-viewer/example-viewer/example-viewer.component.html
+++ b/docs/src/app/shared/component-viewer/example-viewer/example-viewer.component.html
@@ -8,7 +8,7 @@
     aria-label="View code"
     sbbTooltip="View code"
   >
-    <sbb-icon svgIcon="showcase:code" />
+    <sbb-icon svgIcon="docs:code" />
   </button>
 
   <button
