--- a/docs/src/app/shared/component-viewer/component-viewer/component-viewer.component.html
+++ b/docs/src/app/shared/component-viewer/component-viewer/component-viewer.component.html
@@ -1,13 +1,14 @@
 <nav sbb-tab-nav-bar aria-label="Documentation Sections" [tabPanel]="tabPanel">
-  <a
-    *ngFor="let section of sections"
-    sbb-tab-link
-    [routerLink]="['.', section.toLowerCase()]"
-    routerLinkActive
-    #rla="routerLinkActive"
-    [active]="rla.isActive"
-    >{{ section }}</a
-  >
+  @for (section of sections; track section) {
+    <a
+      sbb-tab-link
+      [routerLink]="['.', section.toLowerCase()]"
+      routerLinkActive
+      #rla="routerLinkActive"
+      [active]="rla.isActive"
+      >{{ section }}</a
+    >
+  }
 </nav>
 
 <sbb-tab-nav-panel #tabPanel>
