--- a/docs/src/app/shared/component-viewer/example-list-viewer/example-list-viewer.component.html
+++ b/docs/src/app/shared/component-viewer/example-list-viewer/example-list-viewer.component.html
@@ -1,4 +1,7 @@
-<ng-container *ngIf="examples | async as _examples; else noData">
-  <sbb-example-viewer *ngFor="let exampleData of _examples" [exampleData]="exampleData" />
-</ng-container>
-<ng-template #noData> No Examples found </ng-template>
+@if (examples | async; as _examples) {
+  @for (exampleData of _examples; track exampleData) {
+    <sbb-example-viewer [exampleData]="exampleData" />
+  }
+} @else {
+  No Examples found
+}
